--- a/redditAww/src/style.css
+++ b/redditAww/src/style.css
@@ -1,6 +1,7 @@
 h1 {
   width: 30%;
   margin: auto;
+  margin-bottom: 2rem;
 }
 
 body {
@@ -8,7 +9,7 @@ body {
 }
 
 .redditListContainer {
-  padding-top: 3rem;
+  /* padding-top: 3rem; */
   padding-left: 1rem;
   padding-right: 1rem;
   width: 60%;
