--- a/redditAww/src/style.css
+++ b/redditAww/src/style.css
@@ -1,7 +1,5 @@
 h1 {
-  width: 30%;
-  margin: auto;
-  margin-bottom: 2rem;
+  text-align: center;
 }
 
 body {
@@ -10,8 +8,6 @@ body {
 
 .redditListContainer {
   display: flex;
-  justify-content: center;
-  align-items: center;
   flex-direction: column;
   width: 50%;
   margin: auto;
@@ -20,14 +16,34 @@ body {
 .redditListItem {
   width: 100%;
   margin: auto;
-  padding: 1rem;
+  padding-bottom: 1rem;
+  padding-top: 1rem;
   border: 1px solid black;
   border-radius: 0.5rem;
   background-color: bisque;
   margin-bottom: 1rem;
+  max-width: 30rem;
+  box-shadow: 10px 5px 5px grey;
 }
 
 .redditListItemTitle {
+  text-align: center;
+  display: flex;
+  justify-content: center;
   font-size: 1rem;
   font-weight: bold;
+  padding: 0.5rem;
+}
+
+.redditListSubredditOrigin {
+  display: flex;
+  justify-content: center;
+}
+
+.redditListItemPicture {
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  border: 1px solid;
+  border-radius: 0.3rem;
 }
