--- a/redditAww/src/style.css
+++ b/redditAww/src/style.css
@@ -1,9 +1,24 @@
+Header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
 h1 {
   text-align: center;
+  font-style: sans-serif;
+  display: flex;
+  border: 0.2rem solid black;
+  max-width: 40rem;
+  margin: auto;
+  padding: 1rem;
+  margin-bottom: 1rem;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 body {
-  background-color: beige;
+  background-color: rgb(196, 212, 255);
 }
 
 .redditListContainer {
@@ -16,13 +31,13 @@ body {
 .redditListItem {
   width: 100%;
   margin: auto;
-  padding-bottom: 1rem;
+  padding-bottom: 2rem;
   padding-top: 1rem;
   border: 1px solid black;
   border-radius: 0.5rem;
-  background-color: bisque;
+  background-color: rgb(222, 234, 250);
   margin-bottom: 1rem;
-  max-width: 30rem;
+  max-width: 50rem;
   box-shadow: 10px 5px 5px grey;
 }
 
@@ -33,11 +48,20 @@ body {
   font-size: 1rem;
   font-weight: bold;
   padding: 0.5rem;
+  text-decoration: none;
+  color: black;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+a:hover {
+  text-decoration: underline;
 }
 
 .redditListSubredditOrigin {
   display: flex;
   justify-content: center;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  padding-bottom: 0.5rem;
 }
 
 .redditListItemPicture {
@@ -46,4 +70,15 @@ body {
   margin: auto;
   border: 1px solid;
   border-radius: 0.3rem;
+  width: 40%;
+  height: auto;
+}
+
+.banner {
+  display: flex;
+  justify-content: center;
+  max-width: 50rem;
+  margin: auto;
+  width: 80%;
+  height: auto;
 }
