--- a/redditAww/src/style.css
+++ b/redditAww/src/style.css
@@ -48,12 +48,13 @@ body {
   font-size: 1rem;
   font-weight: bold;
   padding: 0.5rem;
-  text-decoration: none;
-  color: black;
+  text-decoration: underline;
+  color: rgb(76, 92, 238);
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 a:hover {
+  color: rgb(161, 182, 248);
   text-decoration: underline;
 }
 
